--- a/clinique/src/main/resources/templates/admin/acceuil.html
+++ b/clinique/src/main/resources/templates/admin/acceuil.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
     <head>
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-        <title>Acceuil - Admin</title>
+        <title>Tableau de bord - Admin</title>
         
         <!-- icon -->
         <link rel="shortcut icon" th:href="@{/assets/img/hyper.svg}" type="image/x-icon">
@@ -27,9 +27,9 @@
         <div th:include="/admin/components/header.html"></div>
         ><div th:include="/admin/components/sidebar.html"></div>
 
-        <main id="main" class="main">
+        <main id="main" class="main"> 
             <div class="pagetitle">
-                <h1>Dashbord</h1>
+                <h1>Tableau de bord</h1>
                 <nav>
                   <ol class="breadcrumb">
                     <li class="breadcrumb-item active">Budget</li>
