--- a/clinique/src/main/resources/templates/admin/components/header.html
+++ b/clinique/src/main/resources/templates/admin/components/header.html
@@ -11,8 +11,8 @@
     <nav class="header-nav ms-auto">
     <ul class="d-flex align-items-center">
         <li class="nav-item dropdown pe-3">
-            <a href="/"> 
-                <button type="button" class="logOut btn"><i class="bx bx-log-out"></i></button>
+            <a href="/logoutAdmin"> 
+                <button type="button" class="logOut btn"><i class="bx bx-log-out"></i> Déconnexion</button>
             </a>
         </li>
     </ul>
