--- a/clinique/src/main/resources/templates/admin/crud/acte/update.html
+++ b/clinique/src/main/resources/templates/admin/crud/acte/update.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" th:import="java.util.Date">
     <head>
         <title>Update Acte</title>
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
