--- a/clinique/src/main/resources/templates/index.html
+++ b/clinique/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">  
     <head>    
         <meta charset="UTF-8"/>
-        <title>Page</title>
+        <title>Acceuil</title>
     
     
          <!-- icon -->
@@ -40,17 +40,16 @@
                     <div class="card-body">
     
                       <div class="pt-4 pb-2">
-                        <h5 class="card-title text-center pb-0 fs-4">Welcome</h5>
-                        <p class="text-center small">Connectez vous en tant qu'admin ou employe</p>
+                        <h5 class="card-title text-center pb-0 fs-4">Bienvenue</h5>
+                        <p class="text-center small">Connectez vous dans le compte de l'administrateur ou l'utilisateur</p>
                       </div>
     
                     <div class="row">
-                        <div class="col-md-12">
-                            <a href="/loginAdmin"><button class="btn btn-primary">Login Admin</button></a>
+                        <div class="mb-2 col-md-12">
+                            <a href="/loginAdmin"><button class="btn w-100 btn-primary">Se connecter au compte de l'administrateur</button></a>
                         </div>
-                        <br><br>
-                        <div class="col-md-12">
-                            <a href="/loginEmploye"><button class="btn btn-primary">Login Employe</button></a>
+                        <div class="mb-2 col-md-12">
+                            <a href="/loginEmploye"><button class="btn w-100 btn-primary">Se connecter au compte de l'utilisateur</button></a>
                         </div>
                     </div>
     
