--- a/clinique/src/main/resources/templates/admin/components/sideBar.html
+++ b/clinique/src/main/resources/templates/admin/components/sideBar.html
@@ -6,13 +6,13 @@
         <li class="nav-item">
             <a class="nav-link " href="/admin/acceuil">
                 <i class="bi bi-grid"></i>
-                <span>Dashboard</span>
+                <span>Tableau de bord</span>
             </a>
         </li><!-- End Dashboard Nav -->
 
       <li class="nav-item">
         <a class="nav-link collapsed" data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">
-          <i class="bi bi-menu-button-wide"></i><span>CRUD</span><i class="bi bi-chevron-down ms-auto"></i>
+          <i class="bi bi-menu-button-wide"></i><span>Tables</span><i class="bi bi-chevron-down ms-auto"></i>
         </a>
         <ul id="components-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
           <li>
