--- a/clinique/src/main/resources/templates/admin/crud/acte/liste.html
+++ b/clinique/src/main/resources/templates/admin/crud/acte/liste.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" th:import="java.util.Date">
     <head>
         <title>Liste Acte</title>
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
@@ -66,7 +66,7 @@
                             <td th:text="${acte.type}"></td>
                             <td th:text="${acte.nom}"></td>
                             <td th:text="${acte.prix}"></td>
-                            <td th:text="${acte.dateActe}"></td>
+                            <td th:text="${#dates.format(acte.dateActe, 'dd MMMM yyyy')}"></td>
                             <td>
                               <a th:href="@{/acte/update/{id}(id=${acte.id})}"><button type="button" class="btn btn-info"><i class="bi bi-pencil"></i></button></a>
                               <a th:href="@{/acte/delete/{id}(id=${acte.id})}"><button type="button" class="btn btn-danger"><i class="bi bi-trash"></i></button></a>
