--- a/clinique/src/main/resources/templates/admin/crud/patient/update.html
+++ b/clinique/src/main/resources/templates/admin/crud/patient/update.html
@@ -39,7 +39,7 @@
                         <div class="card-body">
         
                           <div class="pt-4 pb-2">
-                            <h5 class="card-title text-center pb-0 fs-4">Update</h5>
+                            <h5 class="card-title text-center pb-0 fs-4">Modification</h5>
                             <p class="text-center small">Modifier un patient</p>
                           </div>
         
@@ -83,7 +83,7 @@
         
         
                             <div class="col-12">
-                              <button class="btn btn-primary w-100" type="submit">Update</button>
+                              <button class="btn btn-primary w-100" type="submit">Modifier</button>
                             </div>
                             <div class="col-12">
                               <p class="small mb-0"><a href="/patient/liste">← Retour</a></p>
