--- a/clinique/src/main/resources/templates/user/acte/facture.html
+++ b/clinique/src/main/resources/templates/user/acte/facture.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" th:import="java.util.Date">
     <head>
         <title>Facture</title>
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
@@ -16,7 +16,7 @@
         <link th:href="@{/assets/vendor/simple-datatables/style.css}" rel="stylesheet">
 
         <link rel="stylesheet" th:href="@{/assets/css/login.css}">
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.js"></script>
+        <script th:src="@{/assets/js/html2pdf.bundle.min.js}"></script>
         <script>
             function exportToPDF() {
               const element = document.getElementById("fact");
@@ -65,8 +65,8 @@
                       </div>
     
                       <div  class="p-2">
-                        <p>Nom du patient :<span th:text="${patient.nom}"></span></p>
-                        <p>Date de la facture : <span th:text="${dateN}"></span></p>
+                        <p>Nom du patient : <span th:text="${patient.nom}"></span></p>
+                        <p>Date de la facture : <span th:text="${#dates.format(dateN, 'dd MMMM yyyy')}"></span></p>
                       </div>
 
                       <div class="mt-4">
@@ -83,7 +83,7 @@
                                       <tbody>
                                         <tr th:each="acte : ${actes}">
                                           <td th:text="${acte.type}"></td>
-                                          <td th:text="${acte.dateActe}"></td>
+                                          <td th:text="${#dates.format(acte.dateActe, 'dd MMMM yyyy')}"></td>
                                           <td th:text="${acte.prix}"></td>
                                         </tr>
                                         <tr>
